<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hackathon.cultcoin.UserChoice"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/you_got"
            android:text="@string/you_got"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"
            android:layout_centerHorizontal="true"
            android:autoText="false"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/qtd_cultcoin"
            android:layout_below="@+id/you_got"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="CultCoins"
            android:layout_below="@+id/qtd_cultcoin"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/scan_qr_bt"
        android:layout_width="150dp"
        android:text="@string/scan_qr_bt"
        android:onClick="scan_qr"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="150dp"
        android:text="@string/pay_bt"
        android:onClick="pay_activity"
        android:layout_height="wrap_content" />

</LinearLayout>
